--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/skylook.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/adamantine_pictures.PNG" class="img-responsive img-centered" alt="">
                             <p><strong>Title: </strong><br>Adamantine Pictures<br>
-                            <strong>What I did: </strong><br>I deigned the Website.</p>
+                            <strong>What I did: </strong><br>I designed the Website.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Stepping Stone production</a>
@@ -334,21 +334,26 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>iParking</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/iParking.PNG" class="img-responsive img-centered" alt="">
+                            <p><strong>Title: </strong><br>iParking<br>
+                            <strong>What I did: </strong><br>iParking won third place in a challenge that reimagines outdoor parking lots in Los Angeles.I was resonsible for the User Interface/ Front end design of mobile app.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">None</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">September 2014</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="http://startbootstrap.com">Mobile application</a>
+                                    </strong>
+                                </li>
+								<li>Link:
+                                    <strong><a href="http://challengepost.com/software/iparking-3usi2">iParking Link</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -371,21 +376,26 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>iComic</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/icomicport3.jpg" class="img-responsive img-centered" alt="">
+                            <p><strong>Title: </strong><br>iComic<br>
+                            <strong>What I did: </strong><br>iComic won judges honourable mention "build something creative, clever and amazing from the ground up".I was resonsible for the User Interface/ Front end design of mobile app.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">None</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2014</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="http://startbootstrap.com">Mobile application</a>
+                                    </strong>
+                                </li>
+									<li>Link:
+                                    <strong><a href="http://challengepost.com/software/icomic">iComic Link</a>
                                     </strong>
                                 </li>
                             </ul>
